# psych

./: .gitignore  CMakeLists.txt  GAME_DESIGN_JSON_GUIDE.md  README.md  concept-document.docx
assets/: dialogues.json  game_config.json  items.json  maps.json  night_events.json  patients.json  spawn_points.json
src/: main.cpp
src/data/: DialogueData.h  GameConfigData.h  GameDatabase.cpp  GameDatabase.h  ItemData.h  MapData.h  NightEventData.h  PatientData.h
src/ecs/: Components.h  Entity.h  Registry.h
src/game/: Game.cpp  Game.h  GameState.h  WorldState.h
src/platform/: Timer.cpp  Timer.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  DialogueCombatSystem.cpp  DialogueCombatSystem.h  HUDSystem.cpp  HUDSystem.h  InputSystem.cpp  InputSystem.h  InteractionSystem.cpp  InteractionSystem.h  InventorySystem.cpp  InventorySystem.h  MovementSystem.cpp  MovementSystem.h  NightEventSystem.cpp  NightEventSystem.h  PatientSystem.cpp  PatientSystem.h  RenderSystem.cpp  RenderSystem.h  SanitySystem.cpp  SanitySystem.h
